--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -19,7 +19,7 @@ title: Features
             <div class="homepage">
                 <div class="inner-site-container">
                     <header class="page-feature-header">
-                        <div class="page-feature--bg page-feature--bg-art">
+                        <!-- <div class="page-feature--bg page-feature--bg-art">
                             <div class="page-feature-header--details container container-fluid">
                                 <div class="page-feature--title-block">
                                     <a href="#" class="page-feature--title">
@@ -28,7 +28,14 @@ title: Features
                                     <p class="page-feature--sub-title">Stories the take a comprehensive look at what defines our history today</p>
                                 </div>
                             </div>
+                        </div> -->
+                        <div class="container-fluid">
+                            <div class="page-title">
+                                <h1>Feature</h1>
+                                <p class="page-feature--sub-title">Stories the take a comprehensive look at what defines our history today</p>
+                            </div>                            
                         </div>
+
                     </header>
 
                     <div class="features-type feature-page">
