--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -17,12 +17,17 @@ title: Gallery
         <main id="site-content">
             <div class="homepage">
                 <div class="inner-site-container">
-                    <header class="page-intro">
+                    <header class="page-feature-header">
                         
-                        <h1 class="page-intro--title"> Photo Gallery</h1>
-                        <div class="type-desc">Potriats, Live shots amd photo essays that put a torch on our world.</div>
+                        <!-- <h1 class="page-intro--title"> Photo Gallery</h1>
+                        <div class="type-desc">Potriats, Live shots amd photo essays that put a torch on our world.</div> -->
+                        <div class="container-fluid">
+                            <div class="page-title">
+                                <h1>Photo Gallery</h1>
+                                <p class="page-feature--sub-title">Stories the take a comprehensive look at what defines our history today</p>
+                            </div>                            
+                        </div>
                     </header>
-
 
                     <div class="features-type feature-page">
                         <div class="container-block">
