--- a/_sass/pages/single-gally.scss
+++ b/_sass/pages/single-gally.scss
@@ -1,6 +1,6 @@
 #feature-detail{
     transition: opacity .4s ease-in-out;
-    background: #fff;
+    // background: #fff;
 
     &:after, 
     &:before {
