--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -34,6 +34,13 @@
     margin: 0;
     padding: 0;
 }
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 // @font-face {
 //     font-family: 'PTSans';
 //     font-style: normal;
@@ -59,15 +66,13 @@ body{
     min-height: 100%;
     height: 100%;
     background-color: var(--clr-bg-1);
-    font-family: Arial, Helvetica, sans-serif;
-    font-family: 'PTSans-Regular';
     src: url(../assets/fonts/PT_Sans/PTSans-Regular.ttf);
     color:  var(--clr-typo);
     line-height: 1.6;
     font-size: 16px;
-    font-family: "PTserif", Georgia, serif;
     text-rendering: optimizeLegibility;
     transition: background-color .75s;
+    font-family: "Alegreya";
 }
 #main{
     margin: 0 auto;
@@ -286,6 +291,7 @@ strong{
     bottom: 0;
     left: 0;
     opacity: 1;
+    object-fit: cover;
     transition: opacity .3s;
 }
 
@@ -356,10 +362,10 @@ svg {
 
 }
 #site-content > .homepage{
-    @media #{$md-scn--up}{
+    @media #{$lg-scn--up}{
         position: relative;
         z-index: 100;
-        margin-bottom: 67.9rem;
+        margin-bottom: 47.9rem;
         box-shadow: 0 0 20px rgba(0,0,0,0.25);
         background-color: $background-1--lite;
         @include bg-color(#{$background-1-string});
