--- a/_sass/news-module.scss
+++ b/_sass/news-module.scss
@@ -37,6 +37,7 @@
                     width: 220px;
                     flex-shrink: 0;
                     // order: 1;
+                    align-self: center;
                 }
                 picture {
                     position: relative;
@@ -73,6 +74,11 @@
             & .post-module-summary{
                 @include text-color(#{$color-typo-string});
                 transition: color .3s;
+
+                @media only screen and (min-width: 48em){
+                    max-width: 550px;
+                    margin-right: 1.5em;
+                }
                 @media #{$lg-scn--up}{
                     margin-top: .65em;
                 }
@@ -150,11 +156,14 @@
         margin-left: 1em;
         margin-bottom: 40px;
         
+        @media screen and (min-width:450px){
+            width: 45%;
+        }
         @media #{$md-scn--up}{
             width: 50%;
         }
         @media #{$lg-scn--up}{
-            width: 50%;
+            width: 40%;
         }
     }
 
@@ -173,6 +182,16 @@
     z-index: 10;
     border: none;
     width: 100%;
+    
+
+    @media screen and (max-width: 700px){
+        max-height: 175px;
+        object-fit: cover;
+    }
+    @media screen and (min-width: 1200px){
+        max-height: 250px;
+        object-fit: cover;
+    }
 }
 .featured-details{
     position: relative;
@@ -193,11 +212,15 @@
         text-align: center;
         word-wrap: break-word;
         line-height: 1.3;
-        // margin-top: 2em;
+        margin-top: 2em;
 
         @media #{$md-scn--up}{
             margin-top:3em;
             font-size: 1.3rem  !important;
+        }
+
+        @media screen and (min-width: 1200px){
+           margin-top: 2em;
         }
     }
 }
@@ -205,6 +228,10 @@
     text-align: center;
     padding: 0 1rem 3rem;
     line-height: 1.5;
+
+    @media screen and (max-width: 400px){
+        padding-bottom: 2em;
+    }
 }
 .featured--byline{
     text-transform: uppercase;
@@ -227,5 +254,14 @@
 
     @media #{$md-scn--up}{
         font-size: .8rem;
+    }
+}
+
+
+
+//modifications
+.section-padding .inner-section-padding .post-module-content .post-module-summary {
+    @media screen and (max-width: 650px){
+        padding: 0 1em;
     }
 }
