--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -421,8 +421,8 @@ article{
                 background: $color-typo-faint;
                 padding: 1em;
                 border-radius: 50%;
-                box-shadow:    1rem 1rem 2rem rgba(0, 0, 0, .2),
-                -1rem -1rem 2rem rgba(255, 255, 255, .7);
+                // box-shadow:    1rem 1rem 2rem rgba(0, 0, 0, .2),
+                // -1rem -1rem 2rem rgba(255, 255, 255, .7);
 
                &:hover,
                &:focus{
@@ -466,4 +466,27 @@ article{
         max-width: 950px;
         // margin: 0 190px;
     }
+}
+
+.page-title{
+    font-family: "Alegreya";
+    font-size: 50px !important;
+    margin: 30px 0 ;
+    @include border( 1px, solid, #{$background-border-decor-string}, -bottom);
+  
+    h1{
+        font-size: 50px;
+    }
+
+    // @media (min-width: 48em){
+    //     // margin: 0 40px;
+    //     max-width: 550px;
+    // }
+    // @media (min-width: 768px){
+    //     margin: 0 40px
+    // }
+    // @media (min-width: 65em){
+    //     margin: 0 40px;
+    //     margin: 0 90px;
+    // }
 }
