--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,11 +64,10 @@ layout: compress
                             </div>
                             <div class="post-content">
                                 <p>{{content}}</p>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam natus laudantium eius quos ut sapiente ea repudiandae itaque dignissimos perspiciatis explicabo harum obcaecati inventore ipsum placeat consectetur autem quod doloribus minus, rem praesentium. Perspiciatis hic, quisquam praesentium nulla, architecto eligendi delectus reprehenderit, illum aperiam sint sit corrupti totam laudantium voluptatum.</p>
                             </div>
                             <div class="post-message">
                                 <p class="hello">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error doloribus doloremque quas?
+                                    {{ page.post-quote }}
                                 </p>
                             </div>
                         </div>
