--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -155,3 +155,15 @@
     content: " ";
     display: table;
 }
+
+
+//Repairs
+.terms p {
+    font-size: 14px !important;
+}
+.sub-article-details .article-figure .article-img-box img {
+    object-fit: cover;
+}
+.terms .row {
+    margin-top: 2em;
+}
