--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
 <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 
 <!-- CSS LINK -->
-<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/slick.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/slick-theme.css">
-<link rel="stylesheet" href="../assets/css/Vendor/flickity.min.css">
-<link rel="stylesheet" href="../assets/css/Vendor/fullscreen.css">
-<link rel="stylesheet" href="../assets/css/Vendor/slick.css">
-<link rel="stylesheet" href="../assets/css/Vendor/slick-theme.css">
-<link rel="stylesheet" href="../assets/css/Vendor/font-awesome.min.css">
-<link rel="stylesheet" href="../assets/css/Vendor/venobox.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/slick.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/flickity.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/flickity.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/fullscreen.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/slick.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/slick-theme.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/font-awesome.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/venobox.min.css">
