--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,14 +1,14 @@
-<script src="../assets/js/hamburger.js "></script>
-<script src="../assets/js/mobile-gally.js "></script>
-<script src="../assets/js/horizontal-mod.js "></script>
-<script src="../assets/js/fs-gally.js "></script>
-<script src="../assets/js/jquery-3.5.1.min.js"></script>
-<script src="../assets/js/slick.min.js"></script>
-<script src="../assets/js/Vendor/flickity.pkgd.min.js"></script>
-<script src="../assets/js/Vendor/fullscreen.js"></script>
-<script src="../assets/js/Vendor/bg-lazyload.js"></script>
-<script src="../assets/js/Vendor/slick.min.js"></script>
-<script src="../assets/js/Vendor/slick.js"></script>
-<script src="../assets/js/Vendor/venobox.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
+<script src="{{ site.baseurl }}/assets/js/mobile-gally.js "></script>
+<script src="{{ site.baseurl }}/assets/js/horizontal-mod.js "></script>
+<script src="{{ site.baseurl }}/assets/js/fs-gally.js "></script>
+<script src="{{ site.baseurl }}/assets/js/jquery-3.5.1.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/slick.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/flickity.pkgd.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/fullscreen.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/bg-lazyload.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/slick.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/slick.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/venobox.min.js"></script>
 
 
