--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -31,7 +31,7 @@ title: Features
                         </div> -->
                         <div class="container-fluid">
                             <div class="page-title">
-                                <h1>Feature</h1>
+                                <h1>{{ page.title }}</h1>
                                 <p class="page-feature--sub-title">Stories the take a comprehensive look at what defines our history today</p>
                             </div>                            
                         </div>
@@ -43,41 +43,44 @@ title: Features
                             <div class="container-clear-fix">
                                 <div class="feature-page-fragments">
                                     <div class="container-fluid">
-                                        <div class="feature-hero-module-container">
-                                            {% for feature in site.categories.feature %}
-                                            {% if feature.level == "cover" %}
-                                            <div class="feature-hero module">
-                                                <div class="feature-image image module__visual">
-                                                    <a href="{{ feature.url }}" class="image-link">
-                                                        <img src="{{ site.url}}/{{ feature.image-thumb-path}}/{{ feature.image }}" alt="{{ feature.image-alt }}" class="module__img">
-                                                        <div class="overlay"></div>
-                                                    </a>
-                                                    <a href="#" class="feature-type type">{{ feature.type }}</a>
-                                                </div>
-                                                <div class="feature-article-details module__article-details">
-                                                    <a href="{{ feature.url }}" class="title-link">
-                                                        <h2 class="feature-title module__title">
-                                                            {{ feature.title }}
-                                                        </h2>
-                                                    </a>
-                                                    <div class="feature-meta module__meta">
-                                                        <div class="abstract module__abstract">
-                                                            <p> {{ feature.post-meta }} </p>
-                                                        </div>
-                                                        <div class="byline module__byline">
-                                                            <ul class="authors module__authors">
-                                                                <li><span class="display-name">by: {{ feature.author }} / </span></li>
-                                                            </ul>
-                                                            <time class="pub-date module_pub-date" datetime=" {{ feature.pub-date }} " title="">
-                                                                {{ feature.pub-date }}
-                                                            </time>
+                                        <div class="module-row feature-module-row">
+                                            <div class="feature-hero-module-container">
+                                                {% for feature in site.categories.feature %}
+                                                {% if feature.level == "cover" %}
+                                                <div class="feature-hero module">
+                                                    <div class="feature-image image module__visual">
+                                                        <a href="{{ site.baseurl }}{{ feature.url }}" class="image-link">
+                                                            <img src="{{ site.baseurl}}/{{ feature.image-thumb-path}}/{{ feature.image }}" alt="{{ feature.image-alt }}" class="module__img">
+                                                            <div class="overlay"></div>
+                                                        </a>
+                                                        <a href="#" class="feature-type type">{{ feature.type }}</a>
+                                                    </div>
+                                                    <div class="feature-article-details module__article-details">
+                                                        <a href="{{ site.baseurl }}{{ feature.url }}" class="title-link">
+                                                            <h2 class="feature-title module__title">
+                                                                {{ feature.title }}
+                                                            </h2>
+                                                        </a>
+                                                        <div class="feature-meta module__meta">
+                                                            <div class="abstract module__abstract">
+                                                                <p> {{ feature.post-meta }} </p>
+                                                            </div>
+                                                            <div class="byline module__byline">
+                                                                <ul class="authors module__authors">
+                                                                    <li><span class="display-name">by: {{ feature.author }} / </span></li>
+                                                                </ul>
+                                                                <time class="pub-date module_pub-date" datetime=" {{ feature.pub-date }} " title="">
+                                                                    {{ feature.pub-date }}
+                                                                </time>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            {% endif %}
-                                            {% endfor %}
+                                                {% endif %}
+                                                {% endfor %}
+                                            </div>                                            
                                         </div>
+
                                         <!-- <div class="second-tier module-row">
                                             <div class="feature-module module module-with-abstract">
                                                 <div class="module_img module__visual">
@@ -199,20 +202,20 @@ title: Features
                                             <div class="clerarfix">
                                                 <div class="features-fragment">
                                                     <div class="container-fluid">
-                                                        <div class="module-row">
+                                                        <div class="module-row feature-module-row">
                                                             {% for feature in site.categories.feature %}
                                                             {% if feature.level == "non-cover" %}
                                                             <div class="feature-module module">
                                                                 <div class="module_img module__visual">
-                                                                    <a href="{{ feature.url }}" class="image-link">
+                                                                    <a href="{{ site.baseurl }}{{ feature.url }}" class="image-link">
                                                                         <span class="sr-only"> {{ feature.title }}A short message that displays module title</span>
-                                                                        <img class="module_image"  src="{{ site.url}}/{{ feature.image-thumb-path}}/{{ feature.image }}" alt=" {{ feature.image-alt }} ">
+                                                                        <img class="module_image"  src="{{ site.baseurl}}/{{ feature.image-thumb-path}}/{{ feature.image }}" alt=" {{ feature.image-alt }} ">
                                                                         <div class="overlay"></div>
                                                                     </a>
                                                                     <a href="#" class="type">{{ feature.type }}</a>
                                                                 </div>
                                                                 <div class="article-details module__article-details">
-                                                                    <a href="{{ feature.url }}" class="title-link module__title-link">
+                                                                    <a href="{{ site.baseurl }}{{ feature.url }}" class="title-link module__title-link">
                                                                         <h2 class="module__title">
                                                                             {{  feature.title }}
                                                                         </h2>
@@ -263,7 +266,7 @@ title: Features
     {% include footer.html %}
    </div>
    {% include mobi-footer.html %}
-   <script src="../assets/js/hamburger.js "></script>
-   <script src="../assets/js/horizontal-mod.js "></script>
+   <script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
+   <script src="{{ site.baseurl }}/assets/js/horizontal-mod.js "></script>
 </body>
 </html>
