--- a/_layouts/gallery_index.html
+++ b/_layouts/gallery_index.html
@@ -55,110 +55,60 @@ title: Gallery
                                                 {{ gallery["images"] | size }} image{% if gallery["images"].size != 1 %}s{% endif %}
                                             </div>
                                             {% endfor %}
-                                        <div class="second-tier module-row">
-                                        
-                                            {% for gallery in page.galleries %}
+                                        <div class="second-tier module-row feature-module-row">                                    
+                                            {% for gallery in site.gallery %}
                                             <div class="feature-module module module-with-abstract">
-                                                <div class="module_img module__visual">
-                                                    <a href="{{ site.url}}{{ galleries.url }}" class="image-link">
+                                                <div class="module_img module__visual gallery-module-image">
+                                                    <a href="{{ site.baseurl}}{{ gallery.url }}" class="image-link">
                                                         <span class="sr-only">A short message that displays module title</span>
-                                                        <img class="module_image"  src="../assets/images/feature-modules/pitchforkpplheader.jpg" alt="">
+                                                        <img class="module_image"  src="{{ site.baseurl}}/{{ gallery.image-path}}/{{ gallery.cover-image }}" alt="">
                                                         <div class="overlay"></div>
                                                     </a>
                                                     <a href="#" class="type">Rising</a>
                                                 </div>
                                                 <div class="article-details module__article-details">
-                                                    <a href="{{ site.url}}{{ feature.url }}" class="title-link module__title-link">
+                                                    <a href="{{ site.baseurl}}{{ gallery .url }}" class="title-link module__title-link">
                                                         <h2 class="module__title">
-                                                            Talking beyond Buzz Words
+                                                            {{ gallery.title }}
                                                         </h2>
                                                     </a>
                                                     <div class="abstract module__abstract">
-                                                        <p>The race against time when we cant stop and we find ourselves running through the red lights</p>
+                                                        <p>{{ gallery.meta }}</p>
                                                     </div>
                                                     <div class="module__meta meta">
                                                         <div class="bylne module__byline">
                                                             <ul class="authors module__authors">
                                                                 <li><span class="display-name">
-                                                                    by: Oluchi Gramesz /
+                                                                    by: {{ gallery.photographer }} /
                                                                 </span></li>
                                                             </ul>
                                                         </div>
                                                         <p class="date feature-module__date">
-                                                            <time class="pub-date" datetime="" title="">
-                                                                january 15 2020
+                                                            <time class="pub-date" datetime="{{ gallery.date }}" title="{{ gallery.date-title }}">
+                                                                {{ gallery.date }}
                                                             </time>
                                                         </p>
                                                     </div>
                                                 </div>
                                                 <div class="module__highlights"></div>
                                             </div>
-                                        
                                             {% endfor %}
-                                        
-                                            {% for feature in site.categories.Feature %}
-                                            <div class="feature-module module module-with-abstract">
-                                                <div class="module_img module__visual">
-                                                    <a href="{{ site.url}}{{ feature.url }}" class="image-link">
-                                                        <span class="sr-only">A short message that displays module title</span>
-                                                        <img class="module_image"  src="../assets/images/feature-modules/pitchforkpplheader.jpg" alt="">
-                                                        <div class="overlay"></div>
-                                                    </a>
-                                                    <a href="#" class="type">Rising</a>
-                                                </div>
-                                                <div class="article-details module__article-details">
-                                                    <a href="{{ site.url}}{{ feature.url }}" class="title-link module__title-link">
-                                                        <h2 class="module__title">
-                                                            {{ feature.title }}
-                                                        </h2>
-                                                    </a>
-                                                    <div class="abstract module__abstract">
-                                                        <p>The race against time when we cant stop and we find ourselves running through the red lights</p>
-                                                    </div>
-                                                    <div class="module__meta meta">
-                                                        <div class="bylne module__byline">
-                                                            <ul class="authors module__authors">
-                                                                <li><span class="display-name">
-                                                                    by: Oluchi Gramesz /
-                                                                </span></li>
-                                                            </ul>
-                                                        </div>
-                                                        <p class="date feature-module__date">
-                                                            <time class="pub-date" datetime="" title="">
-                                                                january 15 2020
-                                                            </time>
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="module__highlights"></div>
-                                            </div>
-                                        
-                                            {% endfor %}
-                                        
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-
-
-
-
-
-
-
-
-
-
-
+                    </div>
                 </div>    
             </div>
         </main>
+
+
+        
     {% include footer.html %}
    </div>
    {% include mobi-footer.html %}
-   <script src="../assets/js/hamburger.js "></script>
-   <script src="../assets/js/horizontal-mod.js "></script>
+   <script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
+   <script src="{{ site.baseurl }}/assets/js/horizontal-mod.js "></script>
 </body>
 </html>
