--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,6 +17,7 @@ title: Gallery
         <main id="site-content">
             <div class="homepage">
                 <div class="inner-site-container">
+
                     <!-- <header class="page-intro">
                         
                         <h1 class="page-intro--title"> Photo Gallery</h1>
@@ -50,15 +51,42 @@ title: Gallery
                                     </div>
                                 </div>
                             </div> 
+                            <style TYPE="text/css">
+                                .gallery-image-wrapper {
+                                height: 300px;
+                                width: 300px;
+                                display: inline-block;
+                                margin: 1em;
+                                position: relative;
+                                }
+                                .gallery-image {
+                                margin: auto;
+                                position: absolute;
+                                top: 0px;
+                                bottom: 0px; 
+                                max-height: 100%;
+                                max-width: 100%;
+                                }
+                                </style>
+                                <h1>Hello<a href="/{{ site.gallery.dir }}">{{ page.title }}</a></h1>
+                                <hr />
+                                {% for image in page.images %}
+                                    <div class="gallery-image-wrapper">
+                                        <a name="{{ image.name }}"></a>
+                                        <a href="{{ image.name }}"{% if site.gallery.lightbox %} rel="lightbox[{{ page.gallery }}]"{% endif %}>
+                                            <img class="gallery-image" src="thumbs/{{ image.name }}" />
+                                        </a>
+                                    </div>
+                                {% endfor %}
 
                             <!-- mobile-gallery -->
-                            <div class="block-area landing landing--ss">
+                            <!-- <div class="block-area landing landing--ss">
                                 <div class="container-fluid fts-article">
                                     <div class="block-div-row">
                                         <div class="mobile-lower-meta mobile-lower-meta--features">
                                             <ul class="authors">
                                                 <li>
-                                                    <span>{{ site.title }}</span>
+                                                    <span>Nwangele Post</span>
                                                 </li>
                                             </ul>
 
@@ -81,26 +109,54 @@ title: Gallery
                                         </button>
                                         <div>
                                             <ul class="main-carousel mobile-gallery__carousel mobile-gallery__carousel-ul">
-                                                {% for photo in page.images %}
                                                 <li class="mobile-gallery__carousel-item">
-                                                    <img src="{{ site.baseurl }}/assets/images/uploads/gallery/{{ page.album-name }}/{{ photo.image }}" alt="" class="carousel-img" data-flickity-lazyload="../assets/images/img-1a.jpg">
+                                                    <img src="../assets/images/uploads/gallery/poster-full.jpg" alt="" class="carousel-img" data-flickity-lazyload="../assets/images/img-1a.jpg">
                                                     <div class="mobile-gallery__info">
                                                         <div class="mobile-gallery__info-text">
                                                             <div class="mobile-gallery__title">
-                                                                {{ photo.title }}
+                                                                Mura Musa
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </li>
-                                                {% endfor %}
+                                                <li class="mobile-gallery__carousel-item">
+                                                    <img src="../assets/images/uploads/gallery/istockphoto-494711330-612x612.jpg" alt="" class="carousel-img">
+                                                    <div class="mobile-gallery__info">
+                                                        <div class="mobile-gallery__info-text">
+                                                            <div class="mobile-gallery__title">
+                                                                Mura Musa
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                                <li class="mobile-gallery__carousel-item">
+                                                    <img src="../assets/images/uploads/gallery/nikita-tikhomirov-wlo2JlSgwyM-unsplash.jpg" alt="" class="carousel-img">
+                                                    <div class="mobile-gallery__info">
+                                                        <div class="mobile-gallery__info-text">
+                                                            <div class="mobile-gallery__title">
+                                                                Mura Musa
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                                <li class="mobile-gallery__carousel-item">
+                                                    <img src="../assets/images/uploads/gallery/bisikeDay-01.jpg" alt="" class="carousel-img">
+                                                    <div class="mobile-gallery__info">
+                                                        <div class="mobile-gallery__info-text">
+                                                            <div class="mobile-gallery__title">
+                                                                Mura Musa
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- desktop-gallery -->
-                            <div class="block-area landing landing--bs">
+                            <!-- <div class="block-area landing landing--bs">
                                 <div class="container-fluid fts-article-meta_container">
                                     <div class="block-div-row">
                                         <div class="article-meta article-meta--features">
@@ -146,7 +202,7 @@ title: Gallery
                                                             <span class="sr-only">Open share drawer</span>
                                                             <svg class="share-button" x="0px" y="0px" viewBox="204 371.2 205.5 49.5"><path class="share-mark mark" d="M204,396c0-13.1,11.7-24.8,24.8-24.8c14.6,0,24.8,11.7,24.8,24.8c0,13.1-11.7,24.8-24.8,24.8C215.7,420.8,204,409.1,204,396z M282.7,396c0-13.1,11.7-24.8,24.8-24.8c14.6,0,24.8,11.7,24.8,24.8c0,13.1-11.7,24.8-24.8,24.8C292.9,420.8,282.7,409.1,282.7,396z M359.9,396c0-13.1,11.7-24.8,24.8-24.8s24.8,11.7,24.8,24.8c0,13.1-11.7,24.8-24.8,24.8S359.9,409.1,359.9,396z"></path></svg>
                                                         </button>
-                                                    </li>
+                                                    </li> -->
                                                     <!-- <li class="share-module__drawer-item state-enter-done">
                                                         <button class="share-module__primary-btn">
                                                             <span class="sr-only">Share on twitter</span>
@@ -159,13 +215,13 @@ title: Gallery
                                                             <svg class="twitter-button" x="0px" y="0px" viewBox="0 0 42 46.6"><path class="twitter-mark mark" fill-rule="evenodd" clip-rule="evenodd" fill="#010101" d="M24.3,19.4c1.2,0,1.8,0.4,2.4,1c0.5,0,1.2-0.3,1.6-0.5c0.1-0.1,0.3-0.1,0.4-0.2c-0.2,0.6-0.5,1.1-1,1.4c-0.1,0.1-0.2,0.2-0.3,0.2c0,0,0,0,0,0c0.7,0,1.2-0.3,1.7-0.5c0,0,0,0,0,0c-0.3,0.4-0.6,0.9-1,1.2c-0.2,0.1-0.3,0.3-0.5,0.4c0,0.7,0,1.4-0.1,1.9c-0.8,3.4-2.8,5.7-5.9,6.7c-1.1,0.4-3,0.5-4.3,0.2c-0.6-0.2-1.2-0.3-1.8-0.6c-0.3-0.1-0.6-0.3-0.9-0.4c-0.1-0.1-0.2-0.1-0.3-0.2c0.3,0,0.6,0.1,1,0c0.3,0,0.6,0,0.9-0.1c0.7-0.2,1.3-0.3,1.8-0.7c0.3-0.1,0.6-0.3,0.8-0.5c-0.3,0-0.6-0.1-0.9-0.2c-1-0.3-1.6-1-1.9-1.9c0.3,0,1.2,0.1,1.4-0.1c-0.4,0-0.7-0.2-1-0.4c-0.8-0.5-1.4-1.3-1.4-2.6c0.1,0,0.2,0.1,0.3,0.1c0.2,0.1,0.4,0.1,0.6,0.2c0.1,0,0.3,0.1,0.4,0h0c-0.2-0.2-0.4-0.3-0.6-0.5c-0.5-0.6-1-1.6-0.7-2.8c0.1-0.3,0.2-0.6,0.3-0.8c0,0,0,0,0,0c0.1,0.1,0.2,0.2,0.3,0.3c0.3,0.3,0.6,0.6,0.9,0.9c1.1,0.9,2.1,1.4,3.7,1.8c0.4,0.1,0.9,0.2,1.4,0.2c-0.1-0.4-0.1-1,0-1.4c0.3-1,0.9-1.7,1.7-2c0.2-0.1,0.4-0.2,0.7-0.2C24,19.5,24.1,19.5,24.3,19.4z"></path><path class="ring" d="M21,46C9.7,46,0.5,36.8,0.5,25.5S9.7,5,21,5c0.3,0,0.5,0.2,0.5,0.5S21.3,6,21,6C10.2,6,1.5,14.8,1.5,25.5S10.2,45,21,45s19.5-8.7,19.5-19.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5C41.5,36.8,32.3,46,21,46z"></path><path class="arrow" d="M17.3,10.6c-0.1,0-0.3,0-0.4-0.1c-0.2-0.2-0.2-0.5,0-0.7l4.2-4.2l-4.1-4.1c-0.2-0.2-0.2-0.5,0-0.7s0.5-0.2,0.7,0l4.5,4.5c0.2,0.2,0.2,0.5,0,0.7l-4.5,4.5C17.5,10.5,17.4,10.6,17.3,10.6z"></path></svg>
                                                         </button>
                                                     </li> -->
-                                                </ul>
-                                            </div>
+                                                <!-- </ul> -->
+                                            <!-- </div>
                                         </div>
                                     </div>
-                                </div> 
+                                </div>  -->
 
-                                <div class="gallery">
+                                <!-- <div class="gallery">
                                     <div class="container-fluid">
                                         <div class="block-div-row">
                                             <div class="gallery-preview__container">
@@ -185,11 +241,11 @@ title: Gallery
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
 
                             <!-- More from Gallery -->
-                            <div class="features-type feature-page gallery-feature">                             
+                            <!-- <div class="features-type feature-page gallery-feature">                             
                                 <div class="container-block">                        
                                     <div class="container-clear-fix">
                                         <div class="feature-page-fragments">
@@ -534,7 +590,7 @@ title: Gallery
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </article>
                     </div>
 
