--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -476,25 +476,25 @@ article{
     }
 }
 
-.page-title{
-    font-family: "Alegreya";
-    font-size: 50px !important;
-    margin: 30px 0 ;
-    @include border( 1px, solid, #{$background-border-decor-string}, -bottom);
+// .page-title{
+//     font-family: "Alegreya";
+//     font-size: 50px !important;
+//     margin: 30px 0 ;
+//     @include border( 1px, solid, #{$background-border-decor-string}, -bottom);
   
-    h1{
-        font-size: 50px;
-    }
+//     h1{
+//         font-size: 50px;
+//     }
 
-    // @media (min-width: 48em){
-    //     // margin: 0 40px;
-    //     max-width: 550px;
-    // }
-    // @media (min-width: 768px){
-    //     margin: 0 40px
-    // }
-    // @media (min-width: 65em){
-    //     margin: 0 40px;
-    //     margin: 0 90px;
-    // }
-}
+//     // @media (min-width: 48em){
+//     //     // margin: 0 40px;
+//     //     max-width: 550px;
+//     // }
+//     // @media (min-width: 768px){
+//     //     margin: 0 40px
+//     // }
+//     // @media (min-width: 65em){
+//     //     margin: 0 40px;
+//     //     margin: 0 90px;
+//     // }
+// }
