--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -397,4 +397,16 @@ svg {
     background-color: transparent;
     background-image: linear-gradient(45deg,transparent,rgba(0,0,0,.2) 70%,rgba(0,0,0,.3));
 } 
+.page-title {
+    font-family: "Alegreya";
+    font-size: 25px !important;
+    margin: 30px 0;
+    border-bottom: 1px solid var(--clr-bg-bd-decor);
 
+    @media #{$md-scn--up}{
+        font-size: 30px !important;
+    }
+    @media #{$lg-scn--up}{
+        font-size: 50px !important;
+    }
+}
